--- a/escola_de_javascript/Javascript_fullstack/css/CSS001/style.css
+++ b/escola_de_javascript/Javascript_fullstack/css/CSS001/style.css
@@ -1,7 +1,7 @@
 h1{
     color: purple;
     font-size: 50pt;
-    background-color: red;
+    background-color: white;
 }
 
 h4{
@@ -10,4 +10,10 @@ h4{
 
 li{
     color: green;
+}
+
+body {
+    background-image: url('https://www.spacex.com/sites/spacex/files/amos17_v2.jpg');
+    background-repeat: no-reapet;
+    background-size: cover;
 }
