border element update

--- a/escola_de_javascript/Javascript_fullstack/css/CSS001/style.css
+++ b/escola_de_javascript/Javascript_fullstack/css/CSS001/style.css
@@ -1,7 +1,10 @@
 h1{
     color: purple;
     font-size: 50pt;
-    background-color: white;
+    background-color: black;
+    border-color: yellow;
+    border-width: 3px;
+    border-style: solid;
 }
 
 h4{
