--- a/escola_de_javascript/Javascript_fullstack/css/CSS003_Seletores2/style.css
+++ b/escola_de_javascript/Javascript_fullstack/css/CSS003_Seletores2/style.css
@@ -2,6 +2,15 @@
     border: 2px solid;
 }
 */
-li a {
+/*li > a {
     color: red;
 }
+*/
+h1 + h4 {
+    border: 4px dashed;
+}
+
+a[href='/recibo'] {
+    color: orangeS;
+}
+
