Margin and border class

--- a/escola_de_javascript/Javascript_fullstack/css/CSS006_TextosFontes/style.css
+++ b/escola_de_javascript/Javascript_fullstack/css/CSS006_TextosFontes/style.css
@@ -9,4 +9,7 @@ h1 {
     /*text-align: center;
     text-decoration: underline;*/
     font-family: 'Geostar', cursive;
+    margin: 45px auto 200px auto;
+    width: 20%;
+    border: 2px solid;
 }
