--- a/modern-javascript/modeloHTML/assets/css/style.css
+++ b/modern-javascript/modeloHTML/assets/css/style.css
@@ -56,3 +56,8 @@ form button {
 form button:hover {
   background: var(--primary-color-darker);
 }
+
+.paragrafo-resultado {
+  background: rgb(0, 247, 62);
+  padding: 10px 20px;
+}
