--- a/igti-bootcamp-fullstack/aula04/css/style.css
+++ b/igti-bootcamp-fullstack/aula04/css/style.css
@@ -6,6 +6,7 @@ h1 {
   text-align: center;
   font-size: 2rem;
   font-weight: bold;
+  color: purple;
 }
 
 .dados-pessoais {
@@ -18,5 +19,16 @@ h1 {
 #dados {
     margin-left: 30px;
     list-style-type: disc;
+}
+
+table, tr, td,th {
+  padding: 5px;
+  border: 1px solid gray;
+  margin-botton: 30px;
+  margin-top: 30px;
+}
+
+th {
+  background-color: #ddd;
 }
 
