--- a/igti-bootcamp-fullstack/aula04/css/style.css
+++ b/igti-bootcamp-fullstack/aula04/css/style.css
@@ -24,7 +24,7 @@ h1 {
 table, tr, td,th {
   padding: 5px;
   border: 1px solid gray;
-  margin-botton: 30px;
+  margin-bottom: 30px;
   margin-top: 30px;
 }
 
